--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,6 +7,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 13px;
 }
 
 .main {
@@ -17,6 +18,24 @@
   justify-content: center;
   align-items: center;
   font-family: 'Poppins';
+}
+
+.main button{
+  background-color: rgb(29, 27, 27);
+  border: none;
+  color: white;
+  padding: 10px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.main button:hover {
+  /* transform: scale(1.1); */
+  letter-spacing: 4px;
+  transition: all 1s;
 }
 
 .mainlinks {
@@ -70,7 +89,7 @@
   margin-left: auto;
   line-height: 1.15;
   font-size: 3.5rem;
-  font-family: 'Poppins';
+  font-family: 'Poppins',monospace;
 }
 
 .title,
@@ -88,8 +107,8 @@
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+  /* font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+    Bitstream Vera Sans Mono, Courier New, monospace; */
 }
 
 .grid {
@@ -107,19 +126,25 @@
     flex-direction: column;
   }
   .title {
-    font-size: 2.5rem;
+    font-size: 1.5rem;
+    text-align: center;
   }
   .image {
-    width: 250px;
-    height: 250px;
+    width: 200px;
+    height: 200px;
   }
   .main h3{
     font-size: 1rem;
     text-align: center;
   }
+  .main button {
+    padding: 8px 30px;
+  }
   .projects img {
     align-items: center;
-    margin: 1px;
+    justify-content: center;
+    margin-right: 50px;
+    margin-left: 50px;
     width: 350px;
     height: 100px;
   }
@@ -133,7 +158,7 @@
 .projectsHeader {
   font-size: 1.4rem;
   text-align: center;
-  font-family: 'Poppins';
+  font-family: 'Poppins', monospace;
 }
 
 .projects {
@@ -158,6 +183,15 @@
   border-radius: 20px;
 }
 
+@media (max-width: 600px) {
+  .projects img{
+    margin-left: -55px;
+  }
+  .projects {
+    text-align: center;
+  }
+}
+
 .projects img:hover {
   transform: scale(1.1);
 }
@@ -169,6 +203,12 @@
   margin: 100px;
   margin-top: 200px;
   margin-bottom: auto;
+}
+
+@media (max-width: 600px) {
+  .about {
+    margin: 40px;
+  }
 }
 
 .about button{
