--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -24,18 +24,20 @@
   background-color: rgb(29, 27, 27);
   border: none;
   color: white;
-  padding: 10px 32px;
+  padding: 12px 34px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 18px;
   cursor: pointer;
+  border-radius: 10px;
 }
 
 .main button:hover {
   /* transform: scale(1.1); */
   letter-spacing: 4px;
   transition: all 1s;
+  background-color: rgb(53, 49, 49);
 }
 
 .mainlinks {
@@ -81,8 +83,8 @@
 
 .image {
   width: 300px;
-  height: 300px;
-  border-radius: 50%;
+  height: 234px;
+  /* border-radius: 50%; */
   /* margin-left: 20px; */
 }
 .title {
@@ -130,8 +132,8 @@
     text-align: center;
   }
   .image {
-    width: 200px;
-    height: 200px;
+    width: 153px;
+    height: 123px;
   }
   .main h3{
     font-size: 1rem;
@@ -187,6 +189,7 @@
   .projects img{
     margin-left: -55px;
   }
+
   .projects {
     text-align: center;
   }
